# penguin12-microservices

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
monitoring/: prometheus.yml
services/classifier/: Dockerfile  pyproject.toml
services/classifier/app/: main.py  penguin12_classifier.py
services/feature_extractor/: Dockerfile  pyproject.toml
services/feature_extractor/app/: main.py  otel.py  penguin12_cnn.py  penguin12_net.py
services/preprocessor/: Dockerfile  pyproject.toml
services/preprocessor/app/: main.py  preprocessing.py
services/provenance/: .dockerignore  Dockerfile  pyproject.toml
services/provenance/app/: main.py
