[project]
name = "feature-extractor"
version = "0.1.0"
description = "feature extraction microservice for Penguin12-based deepfake detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kafka-python>=2.2.0",
    "numpy>=2.3.0",
    "redis",
    "prometheus-client",
    "torch",
    "huggingface-hub"
]
